# TestKb-repo-2026

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  study.py
front_end_pc/: register.html
front_end_pc/js/: register.js  user_center_info.js
testkb/: manage.py
testkb/celery_tasks/: config.py  main.py
testkb/celery_tasks/email/: tasks.py
testkb/celery_tasks/sms/: tasks.py
testkb/testkb/: settings.py  urls.py  wsgi.py
testkb/testkb/apps/users/: models.py  serializers.py  urls.py  utils.py  views.py
testkb/testkb/apps/users/migrations/: 0001_initial.py
testkb/testkb/apps/verifications/: urls.py  views.py
testkb/testkb/settings/: dev.py
testkb/testkb/utils/: exceptions.py
