[project]
name = "testkb"
version = "0.1.0"
description = "美多商城 - e-commerce platform"
requires-python = ">=3.6"
dependencies = [
    "django>=2.1,<2.2",
    "djangorestframework>=3.9",
    "django-cors-headers>=3.0",
    "django-redis>=4.10",
    "djangorestframework-simplejwt>=4.4",
    "pymysql>=0.9",
    "celery>=4.2,<5.0",
    "redis>=3.0,<4.0",
    "itsdangerous>=1.1,<2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
