[project]
name = "testkb"
version = "0.1.0"
description = "美多商城 - e-commerce platform"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2,<5.0",
    "djangorestframework>=3.14",
    "django-cors-headers>=4.0",
    "django-redis>=5.0",
    "djangorestframework-simplejwt>=5.0",
    "pymysql>=1.0",
    "celery>=5.2,<6.0",
    "redis>=4.5,<6.0",
    "itsdangerous>=2.0",
    "setuptools>=59.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
